# easyget

./: .gitignore  Makefile  README.md  ROADMAP.md  pyproject.toml  requirements.txt  setup.py  test_api.py  test_async.py  test_cli.py  test_easyget.py
.github/workflows/: publish.yml
easyget/: __init__.py  async_session.py  cli.py  diagnostics.py  downloader.py  exceptions.py  input_parser.py  logging_utils.py  models.py  session.py  utils.py  wildcard.py
